# tsz-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yaml
src/: lib.rs
src/decode/: mod.rs  std_decoder.rs
src/encode/: mod.rs  std_encoder.rs
src/stream/: buffered_read.rs  buffered_write.rs  mod.rs
